--- a/main.html
+++ b/main.html
@@ -5,8 +5,25 @@
 <head>
 	<link rel="stylesheet" href="styles.css">
 </head>
-
+<nav>
+<ul>
+<li><a href="#">Home</a></li>
+<li><a href="#">About us</a></li>
+<li><a href="#">Contact us</a></li>
+</ul>
+</nav>
 <body>
+	<h3>Three random videos</h3>
+
+		<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+	</video>
+	<video controls>
+		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
+	</video>
+		<video controls>
+			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"> 
+		</video>
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
