--- a/main.html
+++ b/main.html
@@ -1,30 +1,37 @@
+
 <!DOCTYPE html>
 
 <html>
 
 <head>
+	<title>Semantic Navbar and Vedeos</title>
 	<link rel="stylesheet" href="styles.css">
 </head>
-<nav>
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">About us</a></li>
-<li><a href="#">Contact us</a></li>
-</ul>
-</nav>
-<body>
-	<h3>Three random videos</h3>
 
-		<video controls>
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4">
+<body>
+	<nav>
+		<ul>
+			<li>
+				<a href="#">Home</a>
+			</li>
+			<li>
+				<a href="#">About us</a>
+			</li>
+			<li>
+				<a href="#">Contact us</a>
+			</li>
+		</ul>
+	</nav>
+	<h1>3 random videos</h1>
+	<video width="300px" controls>
+    <source src=http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4 type="video/mp4">
 	</video>
-	<video controls>
-		<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4">
+	<video width="300px" controls>
+		<source src=http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/ForBiggerBlazes.mp4 type="video/mp4">
 	</video>
-		<video controls>
-			<source src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4"> 
-		</video>
-	<!-- the entire body must be written by student -->
+	<video width="300px" controls>
+			<source src=http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/SubaruOutbackOnStreetAndDirt.mp4 type="video/mp4">
+	</video>
     <script type="text/javascript" src="./script.js">
 </script>
 
